--- a/cloud-gateway/src/main/resources/application.yml
+++ b/cloud-gateway/src/main/resources/application.yml
@@ -3,29 +3,17 @@ server:
   
 spring:
   application: 
-    name: CLOUD-GATEWAY 
-  cloud:
-    gateway:
-      routes:
-      - id: COLLEGE-SERVICE
-        uri: lb://COLLEGE-SERVICE
-        predicates:
-        - Path=/college/**
-        filters:
-        - name: CircuitBreaker
-          args:
-            name: COLLEGE-SERVICE
-            fallbackuri: forward:/userServiceFollBack
- 
-      - id: STUDENT-SERVICE
-        uri: lb://STUDENT-SERVICE
-        predicates:
-        - Path=/student/**
-        filters:
-        - name: CircuitBreaker
-          args:
-            name: STUDENT-SERVICE
-            fallbackuri: forward:/departmentServiceFollBack
+    name: CLOUD-GATEWAY
+
+zuul:
+  prefix: /api
+  routes:
+    study:
+      path: /study/**
+      serviceId: COLLEGE-SERVICE
+    people:
+      path: /people/**
+      serviceId: STUDENT-SERVICE
 
 hystrix:
   command:
